tests/neg/parser-stability-19.scala
object x0 {
  case class x0[]():                  // error
    def x0( ) ]                       // error
    def x0 ( x0:x0 ):x0.type = x1 x0
